project(cpp_advanced)
cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_advanced
#        test_file_and_stream.cpp
#        test_dynamic_memory.cpp
#        test_namespace.cpp
#        test_templete.cpp
#        test_pre_process.cpp
        test_signal.cpp
        )
