cmake_minimum_required(VERSION 3.16)
project(cpp_basic)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_basic
        # test_enum.cpp
        # test_function.cpp
        # test_array.cpp
        test_pointer.cpp
        # test_reference.cpp
        # test_time.cpp
        # test_io.cpp
        # test_struct.cpp
        # test_bit_operation.cpp
        # test_operator.cpp
        )
