cmake_minimum_required(VERSION 3.16)
project(cpp_basic)

set(CMAKE_CXX_STANDARD 11)

message(STATUS "Using flag -std=c++11")

add_executable(cpp_basic
        # test_assert.cpp
        # test_array.cpp
        # test_tie_tuple.cpp
        test_for.cpp
        # test_string.cpp
        # test_enum.cpp
        # test_function.cpp
        # test_function_main.cpp
        # test_pointer.cpp
        # test_reference.cpp
        # test_time.cpp
        # test_io.cpp
        # test_struct.cpp
        # test_bit_operation.cpp
        # test_operator.cpp

        # test_namespace.cpp
        # test_const.cpp
        )
