project(cpp_stl)
cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 11)

add_executable(
        cpp_stl
        # test_array.cpp
        test_vector.cpp
        # test_pair.cpp
        # test_map.cpp
        # test_set.cpp
        # test_stack.cpp
        # test_queue.cpp
        # test_deque.cpp
)
